# notekeep

./: AGENTS.md  CLAUDE.md  index.html  opencode.json  package-lock.json  package.json  tailwind.config.js
.agents/skills/cf-init/: SKILL.md
.agents/skills/cf-inject/: SKILL.md
.agents/skills/cf-learn/: SKILL.md
.agents/skills/cf-scan/: SKILL.md
.agents/skills/cf-stats/: SKILL.md
.agents/skills/cf-task-align/: SKILL.md
.agents/skills/cf-task-archive/: SKILL.md
.agents/skills/cf-task-block/: SKILL.md
.agents/skills/cf-task-graph/: SKILL.md
.agents/skills/cf-task-note/: SKILL.md
.agents/skills/cf-task-plan/: SKILL.md
.agents/skills/cf-task-prd/: SKILL.md
.agents/skills/cf-task-start/: SKILL.md
.agents/skills/cf-task-status/: SKILL.md
.claude/commands/: cf-learn.md  cf-stats.md
.code-flow/: .inject-state  config.yml  validation.yml
.code-flow/scripts/: cf_core.py  cf_inject_hook.py  cf_session_hook.py  cf_stats.py  cf_user_prompt_hook.py
.codex/: config.toml  hooks.json
.github/workflows/: release.yml
.opencode/commands/: cf-init.md  cf-inject.md  cf-learn.md  cf-scan.md  cf-stats.md  cf-validate.md
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs
src/components/: ContextMenu.tsx  Dialog.tsx  DragSortable.tsx  Editor.tsx  Settings.tsx  Sidebar.tsx  TableOfContents.tsx  Toolbar.tsx
src/contexts/: LanguageContext.tsx  LanguageContextCore.ts  ThemeContext.tsx  index.ts  useLanguage.ts  useTheme.ts
src/hooks/: useActiveHeading.ts  useNotes.ts
src/utils/: headings.ts
(+33 files in other folders)
